1. 项目添加了内置的Django验证登陆和注销视图 	2. 针对登陆视图和注销视图创建了自定义的模板 并定义了简单的dashboard视图——在登陆后对用户执行重定向的操作 	3. 针对Django设置了某些配置内容

--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -27,3 +27,21 @@ h1{
 h2{
     margin: 30px 0 20px;
 }
+ol{
+    line-height:1.5;
+}
+#header{
+    padding: 10px 100px;
+    font-size: 14px;
+    background: #12c064;
+    color:#fff;
+    border-bottom: 4px solid #1cdf78;
+    overflow:auto
+}
+#header.logo{
+    font-family: 'Muli',sans-serif;
+    float: left;
+    color:#f3f7cc;
+    font-size: 20px;
+    margin-right: 10%;
+}
