--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -38,10 +38,39 @@ ol{
     border-bottom: 4px solid #1cdf78;
     overflow:auto
 }
-#header.logo{
-    font-family: 'Muli',sans-serif;
-    float: left;
+#header .logo {
+    font-family: 'Muli', sans-serif;
+    float:left;
     color:#f3f7cc;
-    font-size: 20px;
-    margin-right: 10%;
+    font-size:20px;
+    margin-right:10%;
+}
+#header ul.menu{
+    list-style: none;
+    float: left;
+    margin:0;
+    padding: 0;
+}
+#header ul.menu li{
+    float: left;
+    padding: 4px 10px;
+}
+#header ul.menu li.selected a,#header ul.menu li.selected a:hover{
+    color: #1b6d32;
+    font-weight: bold;
+}
+#header a {
+    color:#f3f7cc;
+}
+#header a:hover {
+    color:#fff;
+}
+
+#header .user {
+    float:right;
+    padding-top:4px;
+}
+
+#content {
+    padding:30px 100px;
 }
